# bots

./: .env.example  .gitignore  CLAUDE.md  CLIENT_USAGE_GUIDE.md  CONVERSATION_USAGE_GUIDE.md  Dockerfile  LICENSE  README.md  TESTING_STATUS.md  TEST_ENVIRONMENT_SETUP.md  TEST_STATUS_FINAL.md  coze_test_report_20250801_095733.json  coze_test_report_20250801_100048.json  curl_commands.txt  design.md  docker-compose.yml  get_admin_key.sh  pyproject.toml  pytest.ini  run.sh  run_tests.sh  start.py  test_officeai_api.sh  test_simple.py
coze/: README.md  run_test.sh  test_coze_studio.py
docs/: adapter-development-guide.md  coze.md  hooks.md
src/: main.py
src/adapters/: __init__.py  base.py  coze_adapter.py  manager.py  proxy.py
src/api/: auth_api.py  conversation_api.py  management.py  openai_api.py  proxy.py  responses.py
src/auth/: client_auth.py
src/config/: settings.py
src/core/: model_manager.py  openai_client.py  platform_clients.py  vector_store.py
src/database/: connection.py  conversation_repository.py  repository.py
src/log_config/: config.py  middleware.py
src/logging/: config.py  middleware.py
src/models/: __init__.py  client.py  conversation.py  openai.py  request_log.py
tests/: README.md  conftest.py  test_api.py  test_auth.py  test_auth_integration.py  test_client_model.py  test_config.py  test_coze_client.py  test_integration.py  test_model_manager.py  test_openai_api.py  test_openai_library_integration.py  test_platform_clients.py  test_settings.py  test_simple.py
